ios gap fix

--- a/Auth/forgotpassword.css
+++ b/Auth/forgotpassword.css
@@ -43,10 +43,10 @@ body {
     min-height: min(70vh, 450px);
     max-width: 100vw;
     padding: 4vw 8vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-auto-flow: row;
+    justify-items: center;
+    align-content: center;
     gap: 30px;
 }
 
