--- a/Dashboard/Biolinks/biolink-edit.css
+++ b/Dashboard/Biolinks/biolink-edit.css
@@ -84,18 +84,19 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
 }
 
 .options-1 .content-top {
-    display: flex;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 3fr 2fr;
     gap: 15px;
     font-size: 16px;
     margin-bottom: 10px;
 }
 
 .content-top .btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
     gap: 10px;
-    padding: 20px 10px;
+    padding: 0 10px;
     background-color: var(--primary);
     color: #fff;
     font-weight: 500;
@@ -155,8 +156,7 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
     flex: 1;
     font-size: 18px;
     font-weight: 500;
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 20px;
 }
 
@@ -167,9 +167,10 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
 
 #all-items .item-wrap .item-body .item-center {
     flex: 3;
-    display: flex;
+    display: grid;
+    grid-auto-flow: column;
+    justify-items: center;
     justify-content: center;
-    align-items: center;
     font-size: 16px;
     gap: 10px;
 }
@@ -187,7 +188,6 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-    gap: 20px;
 }
 
 #all-items .item-wrap .item-body .item-right label {
@@ -228,7 +228,9 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
 }
 
 #all-items .item-wrap .item-body .item-right .item-btns {
-    display: flex;
+    margin-top: 20px;
+    display: grid;
+    grid-auto-flow: column;
     gap: 10px;
 }
 
@@ -252,8 +254,11 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
 
 .item-wrap.link-item .item-body .item-bottom .link-buttons {
     display: flex;
-    gap: 10px;
     margin: 10px 0;
+}
+
+.item-wrap.link-item .item-body .item-bottom .link-buttons>*+* {
+    margin-left: 10px;
 }
 
 .item-wrap.link-item .item-body .item-bottom .link-buttons .btn {
@@ -365,7 +370,6 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
 
 .link-options .datetime-row {
     display: flex;
-    gap: 5px 10px;
     flex-wrap: wrap;
 }
 
@@ -374,6 +378,7 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
     display: flex;
     flex-direction: column;
     font-size: 12px;
+    margin: 5px;
 }
 
 .link-options .datetime-row .clear-btn {
@@ -475,10 +480,13 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
 .options-3 .settings-row {
     display: flex;
     justify-content: space-between;
-    gap: 5px 15px;
     margin: 20px 0;
     align-items: flex-end;
     flex-wrap: wrap;
+}
+
+.options-3 .settings-row>* {
+    margin: 5px;
 }
 
 .options-3 .settings-btn {
@@ -491,7 +499,6 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
     flex: 1;
 }
 
@@ -628,28 +635,6 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
     border-radius: 50%;
 }
 
-.settings-footer {
-    padding: 20px;
-    border-top: 2px solid var(--primary-light);
-    border-radius: 25px 25px 5px 5px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 10px;
-}
-
-.settings-footer .cancel-btn {
-    background-color: var(--primary-light);
-    color: #000;
-    padding: 10px 15px;
-}
-
-.settings-footer .confirm-btn {
-    background-color: var(--primary);
-    color: #fff;
-    padding: 10px 15px;
-}
-
 .biolink-preview {
     flex: 2;
     display: grid;
@@ -762,7 +747,7 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
 
 /********************************* Modal ******************************/
 .modal#modal-2 {
-    width: min(750px, 100vw);
+    width: min(750px, 90vw);
 }
 
 .modal .widget-card-wrap {
@@ -857,9 +842,13 @@ input#content:checked~section .options-1, input#appearance:checked~section .opti
         display: none;
     }
 
-    .biolink-options .options .item-wrap .item-body {
+    .biolink-options .options #all-items .item-wrap .item-body {
         flex-direction: column;
-        gap: 20px;
+        padding: 10px;
+    }
+
+    .biolink-options .options #all-items .item-wrap .item-body>*+* {
+        margin-top: 20px;
     }
 
     .biolink-options .options {
