--- a/Dashboard/Biolinks/biolinks.css
+++ b/Dashboard/Biolinks/biolinks.css
@@ -35,11 +35,11 @@
 
 #modal-container .modal .modal-body .checkbox-row {
     display: flex;
-    gap: 10px;
 }
 
 #modal-container .modal .modal-body .checkbox-row .checkbox-label {
     font-weight: 500;
+    margin-left: 10px;
 }
 
 #modal-container .modal .modal-body .checkbox-row label {
